# Comppose

./: .gitignore  CMakeLists.txt  README.md
impl/sfml/: CMakeLists.txt  Comppose.cpp
include/comppose/: Comppose.hpp
src/: main.cpp
